# mts

./: .compute  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: GetCacheVariables.cmake  GetVersionFromFile.cmake  UpdateSubmodules.cmake
docs/: Makefile
docs/source/: conf.py  index.rst
src/: CMakeLists.txt
src/service/: CMakeLists.txt  CMakeLists.txt.orig
src/service/api/: json_request_handler.h  output_options.cpp  output_options.h  rapidjson_utils.cpp  rapidjson_utils.h
src/service/api/bergamot/: node_translation.cpp.orig  node_translation.h  node_translation.h.orig
src/service/common/: #translation_options.h#  plaintext_translation.cpp.orig  plaintext_translation.h  translation_job.h  translation_service.cpp  translation_service.cpp.orig  translation_service.h  translation_service.h.orig  translation_worker.cpp.orig
src/service/quality_estimation/: qe.cpp  qe.h
src/service/rest/: rest_server.cpp
src/service/rest/ui/: bergamot_api_v1.html
